Implement get feature api.
