# docs/swagger.json
@@ -204,6 +204,43 @@
                 }
             }
         },
+        "/api/features/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Feature"
+                ],
+                "summary": "Get feature by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Feature ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Whether to get the implicit info",
+                        "name": "implicit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.FeatureDetail"
+                        }
+                    }
+                }
+            }
+        },
         "/api/menus": {
             "post": {
                 "consumes": [
@@ -634,6 +671,32 @@
                     "type": "string"
                 },
                 "route": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.FeatureDetail": {
+            "type": "object",
+            "properties": {
+                "apis": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Api"
+                    }
+                },
+                "features": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Feature"
+                    }
+                },
+                "menus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Menu"
+                    }
+                },
+                "name": {
                     "type": "string"
                 }
             }
